# scim-novel-pinyin

./: ChangeLog  Makefile.am  README  THANKS  autogen.sh  configure.ac
data/: Makefile.am  gb_char.table  gbk_char.table  special_table
modules/: Makefile.am
modules/scim/: Makefile.am  novel_native_lookup_table.cpp  novel_native_lookup_table.h  novel_pinyin_global.cpp  novel_pinyin_global.h  novel_pinyin_imengine.cpp  novel_pinyin_imengine.h  novel_pinyin_imengine_config_keys.h  novel_pinyin_imengine_setup.cpp  novel_pinyin_private.h  novel_special_table.cpp  novel_special_table.h
po/: zh_CN.po  zh_TW.po
src/include/: memory_chunk.h
src/lookup/: Makefile.am  lookup.h  pinyin_lookup.cpp  winner_tree.cpp
src/segment/: Makefile.am
src/storage/: Makefile.am
src/training/: Makefile.am
tests/include/: Makefile.am
tests/lookup/: Makefile.am
tests/storage/: Makefile.am  test_parser.cpp  test_phrase_index.cpp
utils/storage/: Makefile.am
