MAINTAINERCLEANFILES	= Makefile.in


scim_pinyin_datadir   = @NOVEL_PINYIN_DATADIR@
scim_pinyin_data_DATA =  special_table \
			 bigram.db  gb_char.bin \
			 gbk_char.bin  pinyin_index.bin



icondir			= $(SCIM_ICONDIR)
icon_DATA		= novel-pinyin.png

EXTRA_DIST= novel-pinyin.png special_table \
	    bigram.db  gb_char.bin \
	    gbk_char.bin  pinyin_index.bin

